<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/gymgym"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image"
        android:scaleType="center"
        android:src="@drawable/fitnessbackground" />

    <LinearLayout
        android:id="@+id/master_frame"
        android:layout_width="240dp"
        android:layout_height="245dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/corner_bg"
        android:elevation="4dp"
        android:orientation="vertical"
        app:layout_anchor="@+id/gymgym"
        app:layout_anchorGravity="top|center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColorHint="@color/colorAccent"
            android:theme="@style/MyStyle">

            <EditText
                android:id="@+id/field_email"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColorHint="@color/colorAccent"
            android:theme="@style/MyStyle"
            app:passwordToggleDrawable="@drawable/ic_visibility_black_24dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <EditText
                android:id="@+id/field_password"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/lingoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="6dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_anchor="@+id/gymgym"
        app:layout_anchorGravity="bottom|center">

        <TextView
            android:id="@+id/sign_up_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/qanelas"
            android:text="@string/reg"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/email_create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:fontFamily="@font/qanelas"
            android:text="@string/signup"
            android:theme="@style/ThemeOverlay.MyDarkButton" />
    </LinearLayout>

    <at.markushi.ui.CircleButton
        android:id="@+id/email_sign_in_button"
        android:layout_width="56dip"
        android:layout_height="56dip"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:elevation="4dp"
        android:src="@drawable/ic_check_black_24dp"
        android:tint="@android:color/white"
        app:cb_color="@color/colorAccent"
        app:layout_anchor="@+id/master_frame"
        app:layout_anchorGravity="bottom|center" />

</android.support.design.widget.CoordinatorLayout>