<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/none"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fitness.fitz.MainActivity">

    <TextView
        android:id="@+id/textView"
...
        app:poly_corner_radius="5"
        app:poly_shadow="true"
        app:poly_shadow_color="@android:color/black"
        app:poly_vertices="6" />

    <net.grobas.view.PolygonImageView
        android:id="@+id/polygonFood"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
...
