...
    <string name="sign_out">Sign Out</string>
    <string name="Fitz">Fitness</string>
    <string name="loading">Loading…</string>
    <string name="action_settings">Setting</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="reg">Don\'t have an account? <b>Sign Up</b></string>
    <string name="signup">Sign Up</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="nutrition"><![CDATA[Nutrition & Macros]]></string>
    <string name="progress">Progress</string>
    <string name="about">About</string>
...
